# bazel-rules-leveldb

./: BUILD.bazel  README.md
bazel/: deps.bzl  repos.bzl
